--- a/public/index.html
+++ b/public/index.html
@@ -189,6 +189,7 @@
         <button onclick="showSection('game')" id="game-btn"><img src="https://github.com/Opper125/opper-payment/raw/main/game-icon.png" alt="Game">Game</button>
         <button onclick="openTelegram()" id="telegram-btn"><img src="https://github.com/Opper125/opper-payment/raw/main/telegram-icon.png" alt="Telegram">Telegram</button>
         <button onclick="showSection('mi')" id="mi-btn"><img src="https://github.com/Opper125/opper-payment/raw/main/mi.png" alt="MI">Profile</button>
+        <button onclick="logoutUser()" id="logout-btn"><img src="https://cdn-icons-png.flaticon.com/512/6001/6001778.png" alt="Logout">Logout</button>
     </div>
 
     <!-- Audio Elements -->
