--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
                     <span>သို့မဟုတ်</span>
                 </div>
                 <button class="btn btn-outline btn-block" id="google-login-btn">
-                    <img src="https://github.com/Opper125/opper-payment/raw/main/google.png" alt="Google" class="btn-icon">
+                    <img src="https://github.com/Opper125/opper-payment/raw/main/google." alt="Google" class="btn-icon">
                     <span>Google ဖြင့် အကောင့်ဝင်မည်</span>
                 </button>
                 <div class="auth-message error" id="login-error"></div>
@@ -131,7 +131,7 @@
                     <span>သို့မဟုတ်</span>
                 </div>
                 <button class="btn btn-outline btn-block" id="google-signup-btn">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google" class="btn-icon">
+                    <img src="https://github.com/Opper125/opper-payment/raw/main/google.png" alt="Google" class="btn-icon">
                     <span>Google ဖြင့် အကောင့်ဖွင့်မည်</span>
                 </button>
                 <div class="auth-message error" id="signup-error"></div>
@@ -322,6 +322,7 @@
                     <p>အခြားသူထံသို့ ငွေလွှဲပြောင်းပါ</p>
                 </div>
 
+                <div id="recipient-info" style="display: none;"></div>
                 <div class="transfer-form">
                     <div class="form-group">
                         <label for="transfer-phone">လက်ခံမည့်သူ၏ ဖုန်းနံပါတ်</label>
@@ -337,7 +338,6 @@
                             <input type="number" id="transfer-amount" placeholder="ငွေပမာဏထည့်ပါ" min="1000" required>
                         </div>
                     </div>
-                    <div id="recipient-info" style="display: none;"></div>
                     <div class="form-group">
                         <label for="transfer-note">မှတ်ချက် (ထည့်လိုက ထည့်နိုင်သည်)</label>
                         <div class="input-with-icon">
@@ -479,13 +479,13 @@
                     <h3>အကောင့်ဆက်တင်များ</h3>
                     <div class="settings-form">
                         <div class="form-group">
-                    <label>ပရိုဖိုင်ပုံ</label>
+                   <label>ပရိုဖိုင်ပုံ</label>
                         <div id="profile-picture-preview" class="image-preview"></div>
                         <input type="file" id="profile-picture-upload" accept="image/*">
                         <button id="profile-picture-btn" class="btn">ပရိုဖိုင်ပုံ အပ်လုဒ်လုပ်ရန်</button>
                         <div id="profile-picture-error" class="error-message"></div>
                         <div id="profile-picture-success" class="success-message"></div>
-                     </div>
+                   </div>
                         <div class="form-group">
                             <label for="settings-email">အီးမေးလ်</label>
                             <div class="input-with-icon">
@@ -756,5 +756,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="script.js"></script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'938811772a583f31',t:'MTc0NjAyNjg5OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+</body>
 </html>
