--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
                     <span>သို့မဟုတ်</span>
                 </div>
                 <button class="btn btn-outline btn-block" id="google-login-btn">
-                    <img src="https://github.com/Opper125/opper-payment/raw/main/google." alt="Google" class="btn-icon">
+                    <img src="https://github.com/Opper125/opper-payment/raw/main/google.png" alt="Google" class="btn-icon">
                     <span>Google ဖြင့် အကောင့်ဝင်မည်</span>
                 </button>
                 <div class="auth-message error" id="login-error"></div>
@@ -131,7 +131,7 @@
                     <span>သို့မဟုတ်</span>
                 </div>
                 <button class="btn btn-outline btn-block" id="google-signup-btn">
-                    <img src="https://github.com/Opper125/opper-payment/raw/main/google.png" alt="Google" class="btn-icon">
+                    <img src="https://github.com/Opper125/opper-payment/raw/main/logo.png" alt="Google" class="btn-icon">
                     <span>Google ဖြင့် အကောင့်ဖွင့်မည်</span>
                 </button>
                 <div class="auth-message error" id="signup-error"></div>
@@ -321,9 +321,8 @@
                     <h2>ငွေလွှဲရန်</h2>
                     <p>အခြားသူထံသို့ ငွေလွှဲပြောင်းပါ</p>
                 </div>
-
-                <div id="recipient-info" style="display: none;"></div>
-                <div class="transfer-form">
+                    <div id="recipient-info" style="display: none;"></div>
+                    <div class="transfer-form">
                     <div class="form-group">
                         <label for="transfer-phone">လက်ခံမည့်သူ၏ ဖုန်းနံပါတ်</label>
                         <div class="input-with-icon">
@@ -479,13 +478,21 @@
                     <h3>အကောင့်ဆက်တင်များ</h3>
                     <div class="settings-form">
                         <div class="form-group">
-                   <label>ပရိုဖိုင်ပုံ</label>
-                        <div id="profile-picture-preview" class="image-preview"></div>
-                        <input type="file" id="profile-picture-upload" accept="image/*">
-                        <button id="profile-picture-btn" class="btn">ပရိုဖိုင်ပုံ အပ်လုဒ်လုပ်ရန်</button>
-                        <div id="profile-picture-error" class="error-message"></div>
-                        <div id="profile-picture-success" class="success-message"></div>
-                   </div>
+                            <label for="settings-phone">ဖုန်းနံပါတ်</label>
+                            <div class="input-with-icon">
+                                <i class="fas fa-phone"></i>
+                                <input type="tel" id="settings-phone" placeholder="09xxxxxxxxx" disabled>
+                            </div>
+                        </div>
+                            <div class="form-group">
+                            <label>ပရိုဖိုင်ပုံ</label>
+                            <div id="profile-picture-preview" class="image-preview"></div>
+                            <input type="file" id="profile-picture-upload" accept="image/*">
+                            <button id="profile-picture-btn" class="btn">ပရိုဖိုင်ပုံ အပ်လုဒ်လုပ်ရန်</button>
+                            <div id="profile-picture-error" class="error-message"></div>
+                            <div id="profile-picture-success" class="success-message"></div>
+                        </div>
+                     </div>
                         <div class="form-group">
                             <label for="settings-email">အီးမေးလ်</label>
                             <div class="input-with-icon">
