--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </head>
 <body>
     <!-- Background Elements -->
@@ -321,7 +320,7 @@
                     <h2>ငွေလွှဲရန်</h2>
                     <p>အခြားသူထံသို့ ငွေလွှဲပြောင်းပါ</p>
                 </div>
-                
+
                 <div id="recipient-info" style="display: none;"></div>
                 <div class="transfer-form">
                     <div class="form-group">
@@ -343,6 +342,14 @@
                         <div class="input-with-icon">
                             <i class="fas fa-sticky-note"></i>
                             <input type="text" id="transfer-note" placeholder="မှတ်ချက်ထည့်ပါ">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="transfer-pin">ငွေပေးချေမှု PIN</label>
+                        <div class="input-with-icon">
+                            <i class="fas fa-lock"></i>
+                            <input type="password" id="transfer-pin" placeholder="PIN ထည့်ပါ" maxlength="6" required>
+                            <i class="fas fa-eye-slash toggle-password"></i>
                         </div>
                     </div>
                     <button class="btn btn-primary btn-block" id="transfer-btn">
@@ -691,65 +698,6 @@
                 <button class="btn btn-outline modal-cancel">မလုပ်တော့ပါ</button>
                 <button class="btn btn-primary" id="confirm-action-btn">အတည်ပြုသည်</button>
             </div>
-        </div>
-    </div>
-
-    <!-- PIN Entry Modal -->
-    <div class="modal" id="pin-entry-modal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3>ငွေပေးချေမှု PIN</h3>
-                <button class="modal-close">&times;</button>
-            </div>
-            <div class="modal-body">
-                <p class="text-center mb-4">ငွေလွှဲရန် သင့် PIN ကုဒ်ထည့်ပါ</p>
-                <div class="pin-input-container">
-                    <div class="pin-input-wrapper">
-                        <input type="password" class="pin-input" maxlength="1" data-index="0">
-                        <input type="password" class="pin-input" maxlength="1" data-index="1">
-                        <input type="password" class="pin-input" maxlength="1" data-index="2">
-                        <input type="password" class="pin-input" maxlength="1" data-index="3">
-                        <input type="password" class="pin-input" maxlength="1" data-index="4">
-                        <input type="password" class="pin-input" maxlength="1" data-index="5">
-                    </div>
-                </div>
-                <div class="auth-message error" id="pin-error"></div>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-outline modal-cancel">မလုပ်တော့ပါ</button>
-                <button class="btn btn-primary" id="confirm-pin-btn">အတည်ပြုသည်</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Receipt Modal -->
-    <div class="modal" id="receipt-modal">
-        <div class="modal-content receipt-modal-content">
-            <div class="modal-header receipt-header">
-                <h3>ငွေလွှဲပြေစာ</h3>
-                <div class="receipt-actions">
-                    <button class="btn-icon" id="download-receipt">
-                        <i class="fas fa-download"></i>
-                    </button>
-                    <button class="modal-close">&times;</button>
-                </div>
-            </div>
-            <div class="modal-body receipt-body" id="receipt-container">
-                <!-- Receipt content will be dynamically generated -->
-            </div>
-        </div>
-    </div>
-
-    <!-- Processing Overlay -->
-    <div class="processing-overlay" id="processing-overlay">
-        <div class="processing-content">
-            <div class="loader">
-                <svg viewBox="0 0 80 80">
-                    <circle id="processing-circle" cx="40" cy="40" r="32"></circle>
-                </svg>
-                <div class="loader-text">OPPER</div>
-            </div>
-            <p id="processing-message">ငွေလွှဲလုပ်ဆောင်နေသည်...</p>
         </div>
     </div>
 
