--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
                     <span>သို့မဟုတ်</span>
                 </div>
                 <button class="btn btn-outline btn-block" id="google-signup-btn">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google" class="btn-icon">
+                    <img src="https://github.com/Opper125/opper-payment/raw/main/google.png" alt="Google" class="btn-icon">
                     <span>Google ဖြင့် အကောင့်ဖွင့်မည်</span>
                 </button>
                 <div class="auth-message error" id="signup-error"></div>
@@ -321,6 +321,7 @@
                     <p>အခြားသူထံသို့ ငွေလွှဲပြောင်းပါ</p>
                 </div>
 
+                <div id="recipient-info" style="display: none;"></div>
                 <div class="transfer-form">
                     <div class="form-group">
                         <label for="transfer-phone">လက်ခံမည့်သူ၏ ဖုန်းနံပါတ်</label>
