--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,55 @@
 
     <!-- Loader -->
     <div class="loader-container" id="loader">
-        <div class="loader">
-            <svg viewBox="0 0 80 80">
-                <circle id="loader-circle" cx="40" cy="40" r="32"></circle>
-            </svg>
-            <div class="loader-text">OPPER</div>
+        <div class="container">
+            <div class="top">
+                <div class="square">
+                    <div class="square">
+                        <div class="square">
+                            <div class="square">
+                                <div class="square"><div class="square">
+                                </div></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="square">
+                    <div class="square">
+                        <div class="square">
+                            <div class="square">
+                                <div class="square"><div class="square">
+                                </div></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="left">
+                <div class="square">
+                    <div class="square">
+                        <div class="square">
+                            <div class="square">
+                                <div class="square"><div class="square">
+                                </div></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="right">
+                <div class="square">
+                    <div class="square">
+                        <div class="square">
+                            <div class="square">
+                                <div class="square"><div class="square">
+                                </div></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -130,7 +174,7 @@
                     <span>သို့မဟုတ်</span>
                 </div>
                 <button class="btn btn-outline btn-block" id="google-signup-btn">
-                    <img src="https://github.com/Opper125/opper-payment/raw/main/google.png" alt="Google" class="btn-icon">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google" class="btn-icon">
                     <span>Google ဖြင့် အကောင့်ဖွင့်မည်</span>
                 </button>
                 <div class="auth-message error" id="signup-error"></div>
@@ -321,7 +365,6 @@
                     <p>အခြားသူထံသို့ ငွေလွှဲပြောင်းပါ</p>
                 </div>
 
-                <div id="recipient-info" style="display: none;"></div>
                 <div class="transfer-form">
                     <div class="form-group">
                         <label for="transfer-phone">လက်ခံမည့်သူ၏ ဖုန်းနံပါတ်</label>
@@ -742,11 +785,55 @@
     <!-- Processing Overlay -->
     <div class="processing-overlay" id="processing-overlay">
         <div class="processing-content">
-            <div class="loader">
-                <svg viewBox="0 0 80 80">
-                    <circle id="processing-circle" cx="40" cy="40" r="32"></circle>
-                </svg>
-                <div class="loader-text">OPPER</div>
+            <div class="container">
+                <div class="top">
+                    <div class="square">
+                        <div class="square">
+                            <div class="square">
+                                <div class="square">
+                                    <div class="square"><div class="square">
+                                    </div></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bottom">
+                    <div class="square">
+                        <div class="square">
+                            <div class="square">
+                                <div class="square">
+                                    <div class="square"><div class="square">
+                                    </div></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="left">
+                    <div class="square">
+                        <div class="square">
+                            <div class="square">
+                                <div class="square">
+                                    <div class="square"><div class="square">
+                                    </div></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="square">
+                        <div class="square">
+                            <div class="square">
+                                <div class="square">
+                                    <div class="square"><div class="square">
+                                    </div></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <p id="processing-message">ငွေလွှဲလုပ်ဆောင်နေသည်...</p>
         </div>
